force-app/main/default/objects/int_gdatedesav__c/int_gdatedesav__c.object-meta.xml
<CustomObject>
    <label>int_gdatedesav</label>
    <nameField>
        <label>Nom de int_gdatedefin</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>int_gdatedesav</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>