force-app/main/default/objects/int_gdatedesav__c/fields/Code_affaire__c.field-meta.xml
<CustomField>
    <fullName>Code_affaire__c</fullName>
    <label>Code_affaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>