force-app/main/default/objects/int_gdatedesav__c/fields/Date_de_sav__c.field-meta.xml
<CustomField>
    <fullName>Date_de_sav__c</fullName>
    <label>Date_de_sav</label>
    <type>Date</type>
</CustomField>