force-app/main/default/objects/int_gdatedesav__c/fields/RAD__c.field-meta.xml
<CustomField>
    <fullName>RAD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RAD</label>
    <type>Checkbox</type>
</CustomField>